--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,34 @@
-Source: template-repository
-Section: unknown
+Source: zope.component
+Section: zope
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Maintainer: Debian Python Team <team+python@tracker.debian.org>
+Uploaders: Colin Watson <cjwatson@debian.org>
+Build-Depends: debhelper-compat (= 13),
+               dh-python,
+               python3-all,
+               python3-persistent,
+               python3-setuptools,
+               python3-zope.configuration,
+               python3-zope.event,
+               python3-zope.interface,
+               python3-zope.proxy,
+               python3-zope.security,
+               python3-zope.testing,
+               python3-zope.testrunner,
+Standards-Version: 4.6.2
+Rules-Requires-Root: no
+Homepage: https://github.com/zopefoundation/zope.component
+Vcs-Browser: https://salsa.debian.org/python-team/packages/zope.component
+Vcs-Git: https://salsa.debian.org/python-team/packages/zope.component.git
 
-Package: template-repository
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: python3-zope.component
+Architecture: all
+Depends: python3-zope.interface (>= 5.3.0),
+         ${misc:Depends},
+         ${python3:Depends}
+Description: Zope Component Architecture
+ The core of the Zope Component Architecture. Together with the zope.interface
+ package, it provides facilities for defining, registering and looking up
+ components.
+ .
+ This is the Python 3 version.
