--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,12 @@
 #!/usr/bin/make -f
 
+export PYBUILD_NAME=zope.component
+
 %:
-	dh $@
+	dh $@ --with python3 --buildsystem=pybuild
+
+override_dh_auto_test:
+	PYBUILD_SYSTEM=custom PYBUILD_TEST_ARGS="{interpreter} -m zope.testrunner --test-path=src --verbose --progress --color" dh_auto_test
+
+override_dh_installchangelogs:
+	dh_installchangelogs CHANGES.rst
